--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: linear-gradient(135deg, #4facfe, #00f2fe);
     color: #333;
     overflow-x: hidden;
@@ -124,9 +124,10 @@ main {
 }
 
 footer {
+    letter-spacing: 1px;
     text-align: center;
     padding: 10px;
-    background: #333;
+    background: #009dbc;
     color: #fff;
 }
 
@@ -367,6 +368,10 @@ footer .social-links a {
     font-weight: 900;
     letter-spacing: 2px;
     text-shadow: 0px 3px 5px rgb(0, 0, 0);
+}
+
+#localidades-proximas li {
+    list-style: none;
 }
 
 @media (min-width: 900px) {
